Page Title Changes

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>ALAB – Creative Agency Html Template</title>
+    <title>Nerdism | Contact Us</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONT CSS-->
@@ -47,7 +47,7 @@
                                 </div>
                                 <div class="navbar-header">
                                     <div class="logo">
-                                        <a href="index.html" class="header-logo"><img src="assets/img/logo/logo.png" alt="" /></a>
+                                        <a href="index.html" class="header-logo"><img src="assets/img/logo.png" alt="" /></a>
                                     </div>
                                 </div>
                                 <nav class="navigation">
