--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>ALAB – Creative Agency Html Template</title>
+    <title>Nerdism | About Us</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONT CSS-->
@@ -27,7 +27,7 @@
     <div class="body-wrapper">
         <!-- PAGE LOADER-->
         <div class="preload">
-            <div class="logo-container"><img src="assets/img/logo/logo-transparent.png" alt="" class="logo">
+            <div class="logo-container"><img src="assets/img/logo-transparent.png" alt="" class="logo">
                 <div class="logo-curtain">
                     <div></div>
                 </div>
@@ -47,7 +47,7 @@
                                 </div>
                                 <div class="navbar-header">
                                     <div class="logo">
-                                        <a href="index.html" class="header-logo"><img src="assets/img/logo/logo.png" alt="" /></a>
+                                        <a href="index.html" class="header-logo"><img src="assets/img/logo.png" alt="" /></a>
                                     </div>
                                 </div>
                                 <nav class="navigation">
@@ -65,54 +65,9 @@
                                                 </div>
                                             </div>
                                             <ul class="nav-links nav navbar-nav is-hidden">
-                                                <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Home</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
-                                                    <ul class="dropdown-menu dropdown-menu-1 is-hidden">
-                                                        <li class="goback"><a href="#0" class="link-page"><i class="fa fa-angle-left"></i></a></li>
-                                                        <li><a href="index.html" class="link-page">Homepage default</a></li>
-                                                        <li><a href="homepage-02.html" class="link-page">Homepage 02</a></li>
-                                                        <li><a href="homepage-03.html" class="link-page">Homepage 03</a></li>
-                                                        <li><a href="homepage-advertising.html" class="link-page">Homepage Advertising</a></li>
-                                                        <li><a href="homepage-artist.html" class="link-page">Homepage Artist</a></li>
-                                                        <li><a href="homepage-branding.html" class="link-page">Homepage Branding</a></li>
-                                                        <li><a href="homepage-game.html" class="link-page">Homepage Game</a></li>
-                                                        <li><a href="homepage-interior.html" class="link-page">Homepage Interior</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="active"><a href="about-us.html" class="main-menu"><span class="text">about</span></a></li>
+                                                <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
+                                                <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
                                                 <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
-                                                <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Portfolio</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
-                                                    <ul class="dropdown-menu dropdown-menu-1 is-hidden">
-                                                        <li class="goback"><a href="#0" class="link-page"><i class="fa fa-angle-left"></i></a></li>
-                                                        <li><a href="portfolio-01.html" class="link-page">Portfolio ver.01</a></li>
-                                                        <li><a href="portfolio-02.html" class="link-page">Portfolio ver.02</a></li>
-                                                        <li><a href="portfolio-03.html" class="link-page">Portfolio ver.03</a></li>
-                                                        <li><a href="portfolio-04.html" class="link-page">Portfolio ver.04</a></li>
-                                                        <li><a href="portfolio-05.html" class="link-page">Portfolio ver.05</a></li>
-                                                        <li><a href="portfolio-06.html" class="link-page">Portfolio ver.06</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="team.html" class="main-menu"><span class="text">Team        </span></a></li>
-                                                <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Blog</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
-                                                    <ul class="dropdown-menu dropdown-menu-1 is-hidden">
-                                                        <li class="goback"><a href="#0" class="link-page"><i class="fa fa-angle-left"></i></a></li>
-                                                        <li><a href="blog.html" class="link-page">blog list</a></li>
-                                                        <li><a href="blog-with-sidebar.html" class="link-page">blog with sidebar</a></li>
-                                                        <li><a href="blog-detail.html" class="link-page">blog detail</a></li>
-                                                        <li><a href="blog-detail-with-sidebar.html" class="link-page">blog detail with sidebar</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Pages</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
-                                                    <ul class="dropdown-menu dropdown-menu-1 is-hidden">
-                                                        <li class="goback"><a href="#0" class="link-page"><i class="fa fa-angle-left"></i></a></li>
-                                                        <li><a href="project-detail.html" class="link-page">Project Detail</a></li>
-                                                        <li><a href="heading.html" class="link-page">Heading</a></li>
-                                                        <li><a href="footer-option.html" class="link-page">Footers</a></li>
-                                                        <li><a href="header-dropdown.html" class="link-page">Dropdown Menu</a></li>
-                                                        <li><a href="slider.html" class="link-page">Slider</a></li>
-                                                        <li><a href="typography.html" class="link-page">Typography</a></li>
-                                                        <li><a href="404.html" class="link-page">page 404</a></li>
-                                                    </ul>
-                                                </li>
                                                 <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                             </ul>
                                         </div>
@@ -132,50 +87,9 @@
                                             </div>
                                         </div>
                                         <ul class="nav-links nav navbar-nav">
-                                            <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Home</span><span class="icons-dropdown"><i class="fa fa-angle-down"></i></span></a>
-                                                <ul class="dropdown-menu dropdown-menu-1">
-                                                    <li><a href="index.html" class="link-page">Homepage default</a></li>
-                                                    <li><a href="homepage-02.html" class="link-page">Homepage 02</a></li>
-                                                    <li><a href="homepage-03.html" class="link-page">Homepage 03</a></li>
-                                                    <li><a href="homepage-advertising.html" class="link-page">Homepage Advertising</a></li>
-                                                    <li><a href="homepage-artist.html" class="link-page">Homepage Artist</a></li>
-                                                    <li><a href="homepage-branding.html" class="link-page">Homepage Branding</a></li>
-                                                    <li><a href="homepage-game.html" class="link-page">Homepage Game</a></li>
-                                                    <li><a href="homepage-interior.html" class="link-page">Homepage Interior</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="active"><a href="about-us.html" class="main-menu"><span class="text">about</span></a></li>
+                                            <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
+                                            <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
                                             <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
-                                            <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Portfolio</span><span class="icons-dropdown"><i class="fa fa-angle-down"></i></span></a>
-                                                <ul class="dropdown-menu dropdown-menu-1">
-                                                    <li><a href="portfolio-01.html" class="link-page">Portfolio ver.01</a></li>
-                                                    <li><a href="portfolio-02.html" class="link-page">Portfolio ver.02</a></li>
-                                                    <li><a href="portfolio-03.html" class="link-page">Portfolio ver.03</a></li>
-                                                    <li><a href="portfolio-04.html" class="link-page">Portfolio ver.04</a></li>
-                                                    <li><a href="portfolio-05.html" class="link-page">Portfolio ver.05</a></li>
-                                                    <li><a href="portfolio-06.html" class="link-page">Portfolio ver.06</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="team.html" class="main-menu"><span class="text">Team        </span></a></li>
-                                            <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Blog</span><span class="icons-dropdown"><i class="fa fa-angle-down"></i></span></a>
-                                                <ul class="dropdown-menu dropdown-menu-1">
-                                                    <li><a href="blog.html" class="link-page">blog list</a></li>
-                                                    <li><a href="blog-with-sidebar.html" class="link-page">blog with sidebar</a></li>
-                                                    <li><a href="blog-detail.html" class="link-page">blog detail</a></li>
-                                                    <li><a href="blog-detail-with-sidebar.html" class="link-page">blog detail with sidebar</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Pages</span><span class="icons-dropdown"><i class="fa fa-angle-down"></i></span></a>
-                                                <ul class="dropdown-menu dropdown-menu-1">
-                                                    <li><a href="project-detail.html" class="link-page">Project Detail</a></li>
-                                                    <li><a href="heading.html" class="link-page">Heading</a></li>
-                                                    <li><a href="footer-option.html" class="link-page">Footers</a></li>
-                                                    <li><a href="header-dropdown.html" class="link-page">Dropdown Menu</a></li>
-                                                    <li><a href="slider.html" class="link-page">Slider</a></li>
-                                                    <li><a href="typography.html" class="link-page">Typography</a></li>
-                                                    <li><a href="404.html" class="link-page">page 404</a></li>
-                                                </ul>
-                                            </li>
                                             <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -248,7 +162,7 @@
                                         <div class="col-sm-12">
                                             <div class="group-content">
                                                 <div class="group-title group-title-6">
-                                                    <h2 class="main-title">Discover all about <span>alab</span> <span class="dot"></span></h2></div>
+                                                    <h2 class="main-title">Discover all about <span>Nerdism</span> <span class="dot"></span></h2></div>
                                                 <div class="group-wrapper">
                                                     <div class="description">___ Culture, Values &amp; Team</div><a href="http://www.youtube.com/embed/L9szn1QQfas?autoplay=1" class="btn-play-video fancybox.iframe">Play the intro video</a></div>
                                             </div>
@@ -464,7 +378,7 @@
                                         <div class="col-sm-12">
                                             <div class="group-content">
                                                 <div class="group-title group-title-4 bg-primary">
-                                                    <h2 class="main-title">Why Choose <span>ALAB</span> <span class="dot"></span></h2></div>
+                                                    <h2 class="main-title">Why Choose <span>Nerdism</span> <span class="dot"></span></h2></div>
                                                 <div class="group-wrapper">
                                                     <div class="row">
                                                         <div class="col-sm-4">
@@ -595,20 +509,6 @@
                                 </div>
                             </div>
                         </section>
-                        <section class="our-subscribe layout-1 padding-top-50 padding-bottom-50">
-                            <div class="container">
-                                <div class="block-row">
-                                    <div class="block-row-left">
-                                        <h4 class="heading">Subscribe <span>ALAB</span> to get latest offers to day!</h4>
-                                        <div class="text">Temporibus autem quibusdam et aut officiis debitis aut rerum</div>
-                                    </div>
-                                    <div class="block-row-right">
-                                        <form action="#" class="form-subscribe">
-                                            <input type="text" placeholder="Your Email" class="input-email form-control"><a href="#" class="btn btn-main btn-primary">Get offers</a></form>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
                     </div>
                 </div>
             </div>
@@ -621,7 +521,7 @@
                                 <div class="row">
                                     <div class="col-sm-3">
                                         <div class="about-us-widget widget">
-                                            <div class="footer-logo"><img src="assets/img/logo/logo.png" alt="" /></div>
+                                            <div class="footer-logo"><img src="assets/img/logo.png" alt="" /></div>
                                             <div class="content-widget">
                                                 <div class="text">Ut enim ad minim veniam, quis nostrud cittion ullamco laboris nisi ut aliquip cosquat uis aute irure dolor ullamco nisi inkabris reprhenderit labore.</div>
                                                 <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link pinterest"><i class="fa fa-pinterest-p"></i></a><a href="#" class="link google"><i class="fa fa-google"></i></a></div>
@@ -634,9 +534,9 @@
                                             <div class="content-widget">
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
-                                                        <li><i class="icons fa fa-map-marker"></i><a href="#" class="link">132, My Street, Kingston, New York</a></li>
-                                                        <li><i class="icons fa fa-phone"></i><a href="#" class="link">270 - 188 - 6026 <br /> 270 - 188 - 6026</a></li>
-                                                        <li><i class="icons fa fa-envelope-o"></i><a href="mailto:hello@swlabs.co" class="link">hello@swlabs.co</a></li>
+                                                        <li><i class="icons fa fa-map-marker"></i><a href="#" class="link">11519 Craig Ct, St. Louis, MO 63146</a></li>
+                                                        <li><i class="icons fa fa-phone"></i><a href="#" class="link">(314) 288-9810</a></li>
+                                                        <li><i class="icons fa fa-envelope-o"></i><a href="mailto:MarkMurphy@Nerdism.io" class="link">Info@Nerdism.io</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -686,7 +586,7 @@
                         </div>
                     </div>
                     <div class="footer-copyright">
-                        <div class="text">&copy; Designed by SWLABS.</div>
+                        <div class="text">&copy; Nerdism</div>
                     </div>
                 </div>
             </footer>
