--- a/services.html
+++ b/services.html
@@ -66,54 +66,10 @@
                                             </div>
                                             <ul class="nav-links nav navbar-nav is-hidden">
                                                 <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Home</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
-                                                    <ul class="dropdown-menu dropdown-menu-1 is-hidden">
-                                                        <li class="goback"><a href="#0" class="link-page"><i class="fa fa-angle-left"></i></a></li>
-                                                        <li><a href="index.html" class="link-page">Homepage default</a></li>
-                                                        <li><a href="homepage-02.html" class="link-page">Homepage 02</a></li>
-                                                        <li><a href="homepage-03.html" class="link-page">Homepage 03</a></li>
-                                                        <li><a href="homepage-advertising.html" class="link-page">Homepage Advertising</a></li>
-                                                        <li><a href="homepage-artist.html" class="link-page">Homepage Artist</a></li>
-                                                        <li><a href="homepage-branding.html" class="link-page">Homepage Branding</a></li>
-                                                        <li><a href="homepage-game.html" class="link-page">Homepage Game</a></li>
-                                                        <li><a href="homepage-interior.html" class="link-page">Homepage Interior</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="about-us.html" class="main-menu"><span class="text">about</span></a></li>
-                                                <li class="active"><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
-                                                <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Portfolio</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
-                                                    <ul class="dropdown-menu dropdown-menu-1 is-hidden">
-                                                        <li class="goback"><a href="#0" class="link-page"><i class="fa fa-angle-left"></i></a></li>
-                                                        <li><a href="portfolio-01.html" class="link-page">Portfolio ver.01</a></li>
-                                                        <li><a href="portfolio-02.html" class="link-page">Portfolio ver.02</a></li>
-                                                        <li><a href="portfolio-03.html" class="link-page">Portfolio ver.03</a></li>
-                                                        <li><a href="portfolio-04.html" class="link-page">Portfolio ver.04</a></li>
-                                                        <li><a href="portfolio-05.html" class="link-page">Portfolio ver.05</a></li>
-                                                        <li><a href="portfolio-06.html" class="link-page">Portfolio ver.06</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="team.html" class="main-menu"><span class="text">Team        </span></a></li>
-                                                <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Blog</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
-                                                    <ul class="dropdown-menu dropdown-menu-1 is-hidden">
-                                                        <li class="goback"><a href="#0" class="link-page"><i class="fa fa-angle-left"></i></a></li>
-                                                        <li><a href="blog.html" class="link-page">blog list</a></li>
-                                                        <li><a href="blog-with-sidebar.html" class="link-page">blog with sidebar</a></li>
-                                                        <li><a href="blog-detail.html" class="link-page">blog detail</a></li>
-                                                        <li><a href="blog-detail-with-sidebar.html" class="link-page">blog detail with sidebar</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Pages</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
-                                                    <ul class="dropdown-menu dropdown-menu-1 is-hidden">
-                                                        <li class="goback"><a href="#0" class="link-page"><i class="fa fa-angle-left"></i></a></li>
-                                                        <li><a href="project-detail.html" class="link-page">Project Detail</a></li>
-                                                        <li><a href="heading.html" class="link-page">Heading</a></li>
-                                                        <li><a href="footer-option.html" class="link-page">Footers</a></li>
-                                                        <li><a href="header-dropdown.html" class="link-page">Dropdown Menu</a></li>
-                                                        <li><a href="slider.html" class="link-page">Slider</a></li>
-                                                        <li><a href="typography.html" class="link-page">Typography</a></li>
-                                                        <li><a href="404.html" class="link-page">page 404</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
+                                                    <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
+                                                    <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
+                                                    <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
+                                                    <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -132,50 +88,9 @@
                                             </div>
                                         </div>
                                         <ul class="nav-links nav navbar-nav">
-                                            <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Home</span><span class="icons-dropdown"><i class="fa fa-angle-down"></i></span></a>
-                                                <ul class="dropdown-menu dropdown-menu-1">
-                                                    <li><a href="index.html" class="link-page">Homepage default</a></li>
-                                                    <li><a href="homepage-02.html" class="link-page">Homepage 02</a></li>
-                                                    <li><a href="homepage-03.html" class="link-page">Homepage 03</a></li>
-                                                    <li><a href="homepage-advertising.html" class="link-page">Homepage Advertising</a></li>
-                                                    <li><a href="homepage-artist.html" class="link-page">Homepage Artist</a></li>
-                                                    <li><a href="homepage-branding.html" class="link-page">Homepage Branding</a></li>
-                                                    <li><a href="homepage-game.html" class="link-page">Homepage Game</a></li>
-                                                    <li><a href="homepage-interior.html" class="link-page">Homepage Interior</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="about-us.html" class="main-menu"><span class="text">about</span></a></li>
-                                            <li class="active"><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
-                                            <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Portfolio</span><span class="icons-dropdown"><i class="fa fa-angle-down"></i></span></a>
-                                                <ul class="dropdown-menu dropdown-menu-1">
-                                                    <li><a href="portfolio-01.html" class="link-page">Portfolio ver.01</a></li>
-                                                    <li><a href="portfolio-02.html" class="link-page">Portfolio ver.02</a></li>
-                                                    <li><a href="portfolio-03.html" class="link-page">Portfolio ver.03</a></li>
-                                                    <li><a href="portfolio-04.html" class="link-page">Portfolio ver.04</a></li>
-                                                    <li><a href="portfolio-05.html" class="link-page">Portfolio ver.05</a></li>
-                                                    <li><a href="portfolio-06.html" class="link-page">Portfolio ver.06</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="team.html" class="main-menu"><span class="text">Team        </span></a></li>
-                                            <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Blog</span><span class="icons-dropdown"><i class="fa fa-angle-down"></i></span></a>
-                                                <ul class="dropdown-menu dropdown-menu-1">
-                                                    <li><a href="blog.html" class="link-page">blog list</a></li>
-                                                    <li><a href="blog-with-sidebar.html" class="link-page">blog with sidebar</a></li>
-                                                    <li><a href="blog-detail.html" class="link-page">blog detail</a></li>
-                                                    <li><a href="blog-detail-with-sidebar.html" class="link-page">blog detail with sidebar</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Pages</span><span class="icons-dropdown"><i class="fa fa-angle-down"></i></span></a>
-                                                <ul class="dropdown-menu dropdown-menu-1">
-                                                    <li><a href="project-detail.html" class="link-page">Project Detail</a></li>
-                                                    <li><a href="heading.html" class="link-page">Heading</a></li>
-                                                    <li><a href="footer-option.html" class="link-page">Footers</a></li>
-                                                    <li><a href="header-dropdown.html" class="link-page">Dropdown Menu</a></li>
-                                                    <li><a href="slider.html" class="link-page">Slider</a></li>
-                                                    <li><a href="typography.html" class="link-page">Typography</a></li>
-                                                    <li><a href="404.html" class="link-page">page 404</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
+                                            <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
+                                            <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
                                             <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                         </ul>
                                     </div>
