Contact Pic / Misc Add

--- a/about-us.html
+++ b/about-us.html
@@ -73,7 +73,7 @@
                                         </div>
                                     </div>
                                     <div class="navigation-pc">
-                                        <a href="index.html" class="logo-brand-menu hidden-lg hidden-md"><img src="assets/img/logo/logo.png" alt="" class="img-responsive" /></a>
+                                        <a href="index.html" class="logo-brand-menu hidden-lg hidden-md"><img src="assets/img/logo.png" alt="" class="img-responsive" /></a>
                                         <div class="group-title group-title-1 hidden-lg hidden-md">
                                             <h2 class="main-title"><span class="mute-title">Menu</span></h2></div>
                                         <div class="button-search">
