--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <div class="body-wrapper">
         <!-- PAGE LOADER-->
         <div class="preload">
-            <div class="logo-container"><img src="assets/img/logo/logo-transparent.png" alt="" class="logo">
+            <div class="logo-container"><img src="assets/img/logo-transparent.png" alt="" class="logo">
                 <div class="logo-curtain">
                     <div></div>
                 </div>
@@ -73,7 +73,7 @@
                                         </div>
                                     </div>
                                     <div class="navigation-pc">
-                                        <a href="index.html" class="logo-brand-menu hidden-lg hidden-md"><img src="assets/img/logo/logo.png" alt="" class="img-responsive" /></a>
+                                        <a href="index.html" class="logo-brand-menu hidden-lg hidden-md"><img src="assets/img/logo.png" alt="" class="img-responsive" /></a>
                                         <div class="group-title group-title-1 hidden-lg hidden-md">
                                             <h2 class="main-title"><span class="mute-title">Menu</span></h2></div>
                                         <div class="button-search">
@@ -110,7 +110,7 @@
                                 <div class="page-title-content">
                                     <div class="container">
                                         <div class="box-content">
-                                            <div class="box-img"><img src="assets/img/contact/contact-us-01-banner.png" alt="" class="img-responsive"></div>
+                                            <div class="box-img"><img src="assets/img/contact-us-5.png" alt="" class="img-responsive"></div>
                                         </div>
                                         <div class="group-content">
                                             <div class="group-title group-title-1 group-heading">
@@ -131,62 +131,30 @@
                                     <div class="group-wrapper">
                                         <div class="group-content">
                                             <div class="group-title group-title-5">
-                                                <h2 class="main-title">Need some help? We're here for you</h2></div>
+                                                <h2 class="main-title">Need some help?  We're here for you</h2></div>
                                         </div>
                                         <div class="row">
                                             <div class="col-sm-4">
-                                                <div class="box-media">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-ux-ui"></i></a></div>
-                                                    <div class="box-contact"><a href="#" class="title">Support</a>
-                                                        <div class="text">We're here to help with any questions. You can also check our knowledge base.</div>
-                                                        <div class="border-box-contact"></div>
-                                                        <div class="item"> <i class="fa fa-map-marker"></i>
-                                                            <p>Carly Jean Rohrig 6762 33 Ave</p>
-                                                        </div>
-                                                        <div class="item"><i class="fa fa-phone"></i>
-                                                            <p>910-740-6026</p>
-                                                        </div>
-                                                        <div class="item"><i class="fa fa-envelope-o"></i>
-                                                            <p>jame@alab.com</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="box-media">
                                                     <div class="box-icon"><a href="#" class="icons"><i class="alab-app-development"></i></a></div>
-                                                    <div class="box-contact"><a href="#" class="title">Sale</a>
-                                                        <div class="text">Learn how our solutions can meet your needs. Check out our hot new products.</div>
+                                                    <div class="box-contact"><a href="#" class="title">Contact Us</a>
+                                                        <div class="text">Contact us for anything: Question, concern, tech support, love advice . . we are here.</div>
                                                         <div class="border-box-contact"></div>
                                                         <div class="item"><i class="fa fa-map-marker"></i>
-                                                            <p>Carly Jean Rohrig 6762 33 Ave</p>
+                                                            <p>Mark Murphy 11519 Craig Ct, St.Louis, MO 63146</p>
                                                         </div>
                                                         <div class="item"><i class="fa fa-phone"></i>
-                                                            <p>910-740-6026</p>
+                                                            <p>(314)288-9810</p>
                                                         </div>
                                                         <div class="item"><i class="fa fa-envelope-o"></i>
-                                                            <p>hubson@alab.com</p>
+                                                            <p>MarkMurphy@Nerdism.io</p>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
-                                                <div class="box-media">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-web-developing"></i></a></div>
-                                                    <div class="box-contact"><a href="#" class="title">Press</a>
-                                                        <div class="text">Get the latest Mesosphere news, company info, deals and media resources.</div>
-                                                        <div class="border-box-contact"></div>
-                                                        <div class="item"><i class="fa fa-map-marker"></i>
-                                                            <p>Carly Jean Rohrig 6762 33 Ave</p>
-                                                        </div>
-                                                        <div class="item"><i class="fa fa-phone"></i>
-                                                            <p>910-740-6026</p>
-                                                        </div>
-                                                        <div class="item"><i class="fa fa-envelope-o"></i>
-                                                            <p>pattrick@alab.com</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -219,61 +187,6 @@
                                 </div>
                             </div>
                         </section>
-                        <div class="wrapper-map">
-                            <div class="branch display-none"><a href="javascript:;" class="btn btn-primary">Branches<i class="fa fa-angle-down"></i></a></div>
-                            <div class="over-map">
-                                <div class="container-fluid">
-                                    <div class="row">
-                                        <div class="col-sm-4">
-                                            <div class="location-ny">
-                                                <div class="heading">NY <span class="dot"></span></div>
-                                                <div class="title">New York Office</div>
-                                                <div class="item"><i class="fa fa-fw fa-map-marker"></i>
-                                                    <p>Carly Jean Rohrig 6762 33 Ave</p>
-                                                </div>
-                                                <div class="item"><i class="fa fa-fw fa-phone"></i>
-                                                    <p>910-740-6026</p>
-                                                </div>
-                                                <div class="item"><i class="fa fa-fw fa-envelope-o"></i>
-                                                    <p>william@alab.com</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="location-hk">
-                                                <div class="heading">HK <span class="dot"></span></div>
-                                                <div class="title">Hong Kong Office</div>
-                                                <div class="item"><i class="fa fa-fw fa-map-marker"></i>
-                                                    <p>Pacific Place, 88 Queensway</p>
-                                                </div>
-                                                <div class="item"><i class="fa fa-fw fa-phone"></i>
-                                                    <p>910-740-6026</p>
-                                                </div>
-                                                <div class="item"><i class="fa fa-fw fa-envelope-o"></i>
-                                                    <p>smith@alab.com</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="location-sg">
-                                                <div class="heading">SG <span class="dot"></span></div>
-                                                <div class="title">Singapore Office</div>
-                                                <div class="item"><i class="fa fa-fw fa-map-marker"></i>
-                                                    <p>Carly Jean Rohrig 6762 33 Ave</p>
-                                                </div>
-                                                <div class="item"><i class="fa fa-fw fa-phone"></i>
-                                                    <p>910-740-6026</p>
-                                                </div>
-                                                <div class="item"><i class="fa fa-fw fa-envelope-o"></i>
-                                                    <p>adam@alab.com</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div id="map" class="section contact-map"></div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -286,7 +199,7 @@
                                 <div class="row">
                                     <div class="col-sm-3">
                                         <div class="about-us-widget widget">
-                                            <div class="footer-logo"><img src="assets/img/logo/logo.png" alt="" /></div>
+                                            <div class="footer-logo"><img src="assets/img/logo.png" alt="" /></div>
                                             <div class="content-widget">
                                                 <div class="text">Ut enim ad minim veniam, quis nostrud cittion ullamco laboris nisi ut aliquip cosquat uis aute irure dolor ullamco nisi inkabris reprhenderit labore.</div>
                                                 <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link pinterest"><i class="fa fa-pinterest-p"></i></a><a href="#" class="link google"><i class="fa fa-google"></i></a></div>
@@ -299,9 +212,9 @@
                                             <div class="content-widget">
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
-                                                        <li><i class="icons fa fa-map-marker"></i><a href="#" class="link">132, My Street, Kingston, New York</a></li>
-                                                        <li><i class="icons fa fa-phone"></i><a href="#" class="link">270 - 188 - 6026 <br /> 270 - 188 - 6026</a></li>
-                                                        <li><i class="icons fa fa-envelope-o"></i><a href="mailto:hello@swlabs.co" class="link">hello@swlabs.co</a></li>
+                                                        <li><i class="icons fa fa-map-marker"></i><a href="#" class="link">11519 Craig Ct, St.Louis, MO 63146</a></li>
+                                                        <li><i class="icons fa fa-phone"></i><a href="#" class="link">(314)288-9810</a></li>
+                                                        <li><i class="icons fa fa-envelope-o"></i><a href="mailto:MarkMurphy@Nerdism.io" class="link">Info@Nerdism.io</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -351,7 +264,7 @@
                         </div>
                     </div>
                     <div class="footer-copyright">
-                        <div class="text">&copy; Designed by SWLABS.</div>
+                        <div class="text">&copy; 2017 Nerdism</div>
                     </div>
                 </div>
             </footer>
