Services img / description add

--- a/services.html
+++ b/services.html
@@ -111,7 +111,7 @@
                                 <div class="page-title-content">
                                     <div class="container">
                                         <div class="box-content">
-                                            <div class="box-img"><img src="assets/img/service-1.jpg" alt="" class="img-responsive"></div>
+                                            <div class="box-img"><img src="assets/img/services-header.png" alt="" class="img-responsive"></div>
                                         </div>
                                         <div class="group-content">
                                             <div class="group-title group-title-1 group-heading">
@@ -139,20 +139,20 @@
                                         <div class="row">
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-ux-ui"></i></a></div><a href="#" class="title">UX/UI Design</a>
-                                                    <div class="text">Consect adipisicing elitsed do eiusmod sed do eiusmod tempor incididunt ut labore.</div>
+                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-ux-ui"></i></a></div><a href="#" class="title">Design</a>
+                                                    <div class="text">We will work with you to take your vision and make it a reality.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-web-developing"></i></a></div><a href="#" class="title">Web Developing</a>
-                                                    <div class="text">Consect adipisicing elitsed do eiusmod sed do eiusmod tempor incididunt ut labore.</div>
+                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-web-developing"></i></a></div><a href="#" class="title">Web Development</a>
+                                                    <div class="text">We make beautiful sites that are compatible with desktops, laptops, tablets and phones.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-threed-studio"></i></a></div><a href="#" class="title">3D Studio</a>
-                                                    <div class="text">Consect adipisicing elitsed do eiusmod sed do eiusmod tempor incididunt ut labore.</div>
+                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-threed-studio"></i></a></div><a href="#" class="title">Branding</a>
+                                                    <div class="text">Branding is the face your business shows to the world, and we want it to be the best.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
