Who we are Desc.

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                                 <div class="group-title group-title-1 bg-secondary">
                                                     <h2 class="main-title">we are <span>Nerdism</span> <span class="dot"></span> <span class="mute-title">Who?</span></h2></div>
                                                 <div class="group-wrapper">
-                                                    <div class="text">Consect adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                                                    <div class="text">We are developers, designers and writers who specialize in creative problem-solving and strategic storytelling. Whether working with Fortune 500’s or non-profits, producing software or crafting logos, the narrative is always king. We believe there’s power in your story. We find it, ignite and unleash it to the world.</div>
                                                     <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip consequat uis aute irure dolor ullamco laboris nisi in reprehenderit.</div>
                                                     <br>
                                                     <div class="group-button"><a href="about-us.html" class="btn btn-main">Read More</a></div>
