Header Align / Index lineup Edit and img add

--- a/services.html
+++ b/services.html
@@ -163,7 +163,7 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-creative-process"></i></a></div><a href="#" class="title">Creative Process</a>
+                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-creative-process"></i></a></div><a href="#" class="title">Copywriting</a>
                                                     <div class="text">Consect adipisicing elitsed do eiusmod sed do eiusmod tempor incididunt ut labore.</div>
                                                 </div>
                                             </div>
